# thesis_nlp

./: .gitignore  README.md  default_params.yaml  environment.yaml  mypy.ini  pyproject.toml  setup.sh  sync_run_directories.sh
data/: llm_context.txt  llm_semsim_prompt.txt  semsim_experiments.json
runs/attacker/: log.txt
runs/attacker/run_1/generated_sentences/eval/: epoch_0.csv  epoch_1.csv  epoch_2.csv  epoch_3.csv
runs/attacker/run_1/generated_sentences/train/: epoch_0.csv  epoch_1.csv  epoch_2.csv  epoch_3.csv
runs/attacker/run_12/generated_sentences/eval/: epoch_0.csv  epoch_1.csv  epoch_10.csv  (+67 more)
runs/static_victim_retraining/run_3/: config.json  summary.txt
src/: constants.py  download_sst2.py  dpo_trainer.py  generative_bart.py  semsim_experiments.py  sst2_dataset.py  train_attacker.py  train_echo.py  utils.py
src/control_models/: grammaticality_evaluator.py  semantic_similarity_evaluators.py  semsim_experiments.py  sentiment_classifier.py
src/datasets/: dataset_utils.py  sst2_attacker_dataset.py  sst2_static_victim_retraining_dataset.py
src/pretty_plots_and_stats_for_thesis/: plot_and_tables_run_13_first_exploits.py  plot_base_training.py  plot_echo_training.py  plot_final_attacker_training.py  plot_training_with_harmonic_mean.py  plots_and_tables_echo.py  plots_and_tables_run_13_first_exploits.py  plots_and_tables_run_3_label_flip.py  plots_base_training.py  print_dataset_stats.py  print_semsim_dataset_description.py  print_stats_for_thesis.py  thesis_utils.py
src/training_scripts/: retrain_victim_statically.py  train_attacker.py  train_echo.py
(+854 files in other folders)
